# oopetris_wrapper_java

./: .gitignore  build.sh  pom.xml
.github/workflows/: ci.yml
src/main/cpp/: com_github_oopetris_Recordings.cpp  com_github_oopetris_Recordings.h  convert.cpp  convert.h  exceptions.cpp  exceptions.h  helper.cpp  helper.h  jni_cpp.h  list.h  map.h  meson.build  meson.options  stacktrace.cpp  stacktrace.h
src/main/cpp/tools/: meson.build
src/main/cpp/tools/dependencies/: meson.build
src/main/cpp/tools/options/: meson.build
src/main/java/com/github/oopetris/: AdditionalInformationValue.java  GridProperties.java  InputEvent.java  Mino.java  MinoPosition.java  RecordingInformation.java  RecordingProperties.java  Recordings.java  TetrionHeader.java  TetrionRecord.java  TetrionSnapshot.java  TetrominoType.java  VariantType.java  VariantTypeMismatch.java
src/test/java/com/github/oopetris/: Correct.java  RecordingsTest.java
